--- a/Reg_Ponto/Ponto_Web/style.css
+++ b/Reg_Ponto/Ponto_Web/style.css
@@ -79,12 +79,12 @@ button:hover {
   text-decoration: underline;
 }
 
-/* Passar o mouse o botao fica azul*/
+/* Ao passar o mouse o botao fica azul*/
 .btn-edit:hover {
   color: #1d4ed8; 
 }
 
-/* Passar o mouse o botao fica vermelho*/
+/* Ao passar o mouse o botao fica vermelho*/
 .btn-delete:hover {
   color: #dc2626; 
 }
